--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "AboutDemTacos's Purchase List"
 favicon: assets/img/favicon.png
 description: A custom version of Toolkit's item list to support all the latest features of Utils.
 
-baseurl: '/itemlist' # the subpath of your site, e.g. /blog
+baseurl: 'AboutDemTacos/itemlist' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ''
 github_username: 'AboutDemTacos'
